@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000-2003  Donald N. Allingham
+# Copyright (C) 2000-2004  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,6 +17,8 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
+
+# $Id$
 
 "Generate files/Family Group Report"
 
@@ -501,7 +503,7 @@ class FamilyGroupBareDialog(Report.BareReportDialog):
 
     def on_center_person_change_clicked(self,obj):
         import SelectPerson
-        sel_person = SelectPerson.SelectPerson(self.db,'Select Person')
+        sel_person = SelectPerson.SelectPerson(self.db,_('Select Person'))
         new_person = sel_person.run()
         if new_person:
             self.new_person = new_person
